# Got_Some_Grapes

./: .gitignore  README.md  frames_2026-03-18_12.22.01.gv  frames_2026-03-19_15.13.18.gv  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  ros2_architecture.csv  rs2_turtlebot3
Colour Detection/: colour_detection_batch.py
src/Colour Detection/: ColourBatch.py  colour_detection_batch.py  colour_detection_multi.py  colour_detection_ros2_node.py  yellow_detect.py  yellow_detect_refined.py
src/motion_planner/: package.xml  setup.py
src/motion_planner/launch/: basic_test_launch.py  navigation2.launch.py  sim_launch.py  slam_launch.py  tb3_cartographer_launch.py
src/motion_planner/map/: map.pgm  map.yaml
src/motion_planner/motion_planner/: basic_test.py  controller.py  nav_node.py  route_optimizer_node.py  slam_node.py
src/motion_planner/param/humble/: waffle.yaml
src/perception/: package.xml  setup.py
src/perception/perception/: ColourBatch.py  ai_vision_node.py  aruco_node.py  colour_service_node.py
src/perception_interfaces/: CMakeLists.txt  package.xml
src/perception_interfaces/srv/: DetectColour.srv
src/turtlebot3_sim/: package.xml  setup.py
src/turtlebot3_sim/launch/: turtlebot3_world.launch.py
src/turtlebot3_sim/models/big_supermarket/: model.config  model.sdf
src/turtlebot3_sim/models/supermarket_sim_model/: model.config  model.sdf
src/turtlebot3_sim/worlds/: big_supermarket.world  supermarket_sim.world
src/ui/: package.xml  setup.py
src/ui/ui/: gui_detection_bridge.py  gui_node.py  gui_ui.py  main.py  staff_main.py  staff_node.py  staff_ui.py
