<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>Vision nodes: ArUco and AI vision</description>
  <maintainer email="claudiawee08@gmail.com">Claudia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend> <!-- if publishing cmd_vel or calling back -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- If using OpenCV python library, install system package via apt/pip.
       Use rosdep to pull dependencies where possible. -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
