<?xml version="1.0"?>
<package format="3">
  <name>perception</name>
  <version>0.0.0</version>
  <description>Vision nodes: ArUco, AI vision, and colour detection</description>

  <maintainer email="claudiawee08@gmail.com">Claudia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>perception_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>