<?xml version="1.0"?>
<package format="3">
  <name>perception_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces for the perception package</description>

  <maintainer email="replace_this@example.com">replace_this_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>