<?xml version="1.0"?>
<package format="3">
  <name>ui</name>
  <version>0.0.0</version>
  <description>GUI for user interaction</description>
  <maintainer email="claudiawee08@gmail.com">Claudia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>    <!-- if subscribing /map, /amcl_pose -->
  <depend>sensor_msgs</depend>
  <depend>perception_interfaces</depend>

  <!-- If using PyQt or Tkinter, install system packages (PyQt via pip apt) -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
